--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
+  "homepage": "https://github.com/JahnaviGangarapu/Portfolio.git",
   "name": "Jahnavi-Gangarapu-portfolio",
   "version": "0.1.0",
-  "homepage": "https://github.com/JahnaviGangarapu",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -15,7 +15,6 @@
     "@testing-library/user-event": "^13.5.0",
     "emailjs": "^4.0.2",
     "framer-motion": "^11.3.19",
-    "gh-pages": "^6.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
@@ -29,11 +28,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -52,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
